--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+# DB_URL_LOCAL="postgres://postgres:secret@localhost:5432/postgres"
+
 PORT=4005
-DB_URL="postgres://postgres:secret@localhost:5432/postgres"
+DB_URL="postgres://postgres:secret@postgres/postgres"
