--- a/stack-main.global.yml
+++ b/stack-main.global.yml
@@ -16,31 +16,31 @@ services:
     ports:
       - 5432:5432
     networks:
-      - postgres_network
+      - postgres_network2
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-data2:/var/lib/postgresql/data
 
   payment-service:
-    image: alhon05/payment-service:v${VERSION}
+    image: alhon05/golangsimplecrud:v${VERSION}
     volumes: 
-      - payment_service_data:/services/payment
+      - simplecrud_data:/services/simplecrud
     ports:
-      - 4001:4001
+      - 4005:4005
     networks:
-      - postgres_network
+      - postgres_network2
     depends_on:
       - postgres-db
 
 volumes:
-  postgres-data:
-  payment_service_data:
+  postgres-data2:
+  simplecrud_data:
 
 networks:
-  postgres_network:
+  postgres_network2:
 
 
 
