--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # DB_URL_LOCAL="postgres://postgres:secret@localhost:5432/postgres"
 
 PORT=4005
-DB_URL="postgres://postgres:secret@postgres/postgres"
+DB_URL="postgres://postgres:secret@localhost:5432/postgres"
